подключил генерацию openapi.yml
